# vega

./: .gitignore  README.md  main.py  mise.toml  pyproject.toml
.github/workflows/: deploy.yml
vega/: __init__.py  api.py  build.py  cli.py  images.py  models.py  queries.py  store.py  sync.py  templating.py  web.py
vega/templates/: _macros.html  base.html  calendar.html  catalog.html  day.html  movie.html  premieres.html
