[project]
name = "vega"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.1",
    "httpx2[http2]>=2.5.0",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "pyright>=1.1.411",
    "ruff>=0.15.20",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
vega = "vega.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vega"]

[tool.pyright]
venvPath = "."
venv = ".venv"
